get api of venue and service request
